# cpi

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/module/: FindQwt.cmake
src/: CMakeLists.txt
src/propag1D/: CMakeLists.txt  cpi.cfg  main.cpp
src/propag1D/core1D/: CMakeLists.txt  signal.cpp
src/propag1D/core1D/include/: signal.hpp
src/propag1D/utils/: CMakeLists.txt
src/propagation/: CMakeLists.txt  cpi.cfg  main.cpp
src/propagation/core/: CMakeLists.txt  signal.cpp
src/propagation/core/include/: signal.hpp
src/propagation/utils/: CMakeLists.txt  cfgldr.cpp
src/propagation/utils/include/: cfgldr.hpp
src/python_interface/: README_CPI_Simulation.md  apodized_object_mask_spec.md  cpipy.py  object_input_spec.md  object_mask.py  triple_slit_mask.py
src/reconstruction/: CMakeLists.txt  ghost_reconstruction.cpp
src/temp/: CMakeLists.txt  fft2D.cpp  main.cpp
